 * $Id: ChangeLog,v 1.4215 2005/07/15 04:49:33 walito Exp $

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-07-15 20:03 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbexprop.h
  * source/common/expropt2.c
    + Added: HB_EXPR_PTR hb_compExprListStripSingle( HB_EXPR_PTR pSelf, HB_MACRO_DECL )
  * include/hbexprb.c
    + Added generic optimization:
         x := x + y -> x += y
         x := y + x -> x += y
         x := x - y -> x -= y
         x := y - x -> x += -y
     /*
        Due to subsequent optimization of LOCAL += INT and LOCAL -= INT
        this results in significant optimization of code like:

        LOCAL n1 := 1

        n1 := n1 + 2

        n1 := 2 + n1

        n1 := ( n1 + 3 )

        n1 := ( ( 4 - (n1) ) )

        This also paves the way for a generic HB_P_LOCALNEARADD.
      */

2005-07-15 01:50 UTC-300 Walter Negro <anegro-AT-overnet.com.ar>
  * source/rtl/tclass.prg
    + AddDelegate function to support natives Delegate messages.
    * Code optimized

2005-07-13 16:00 UTC-0300 Mauricio Abre <mgabre@gmail.com>
  * source/rtl/gtalleg/ssf.h
  * source/rtl/gtalleg/gtalleg.c
    ! Don't try to set linux FB console mode if allegro doesn't have support

2005-07-13 23:15 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * contrib/wvtgui/wvtutils.c
    ! WVT_SETICON():: Improper use of hb_parcx(), should be hb_parc().

2005-07-12 13:00 UTC-0400 Gerald Drouillard <gerald@drouillard.ca>
  * source/rtl/tbrowse.prg
    ! replace calls to devpos() with setpos() to maintain clipper
        compatability.

2005-07-12 01:20 UTC-300 Walter Negro <anegro-AT-overnet.com.ar>
  * tests/friendly.prg
  * tests/friendl2.prg
    + Test of friendly class
  * tests/delegate.prg
    + Test of delegate messages

2005-07-11 01:40 UTC-300 Walter Negro <anegro-AT-overnet.com.ar>
  * source/vm/classes.c